fix li checkbox color alignment

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -438,6 +438,10 @@ footer {
     position: relative;
 }
 
+#id_colors li {
+    padding: 0.5rem 0.3rem;
+}
+
 #id_colors .checkbox > span {
     color: #34495E;
     padding: 0.5rem 0.25rem;
@@ -457,7 +461,7 @@ footer {
 }
 
 #id_colors .checkbox > input:checked {
-    border: 3px solid #000;
+    border: 3px solid #424F24;
 }
 
 #id_colors .checkbox > input:checked + span::before {
@@ -471,5 +475,5 @@ footer {
 }
 
 #id_colors .checkbox > input:active {
-    border: 3px solid #000;
+    border: 3px solid #424F24;
 }
